--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div>
-        <img src="assets/image-omelette.jpeg" alt="folded egg omlette with fillings">
+    <div class="content-area">
+        <img src="assets/image-omelette.jpeg" alt="folded egg omlette with fillings" class="final-result">
         <h1>Simple Omlette Recipe</h1>
         <div class="prep-time">
             <h2>Preparation time</h2>
