fix padding/margin and make text bold

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="content-area">
-        <img src="assets/image-omelette.jpeg" alt="folded egg omlette with fillings" class="final-result">
+        <img src="assets/image-omelette.jpeg" alt="folded egg omlette with fillings" id="final-result">
         <h1>Simple Omlette Recipe</h1>
         <div class="prep-time">
             <h2>Preparation time</h2>
