--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li>Salt, to taste</li>
                 <li>Pepper, to taste</li>
                 <li>1 tablespoon of butter or oil</li>
-                <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+                <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs Optional fillings: cheese, diced vegetables, cooked meats, herbs Optional fillings: cheese, diced vegetables, cooked meats, herbs Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
             </ul>
         </div>
 
