--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <li>Salt, to taste</li>
                 <li>Pepper, to taste</li>
                 <li>1 tablespoon of butter or oil</li>
-                <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs Optional fillings: cheese, diced vegetables, cooked meats, herbs Optional fillings: cheese, diced vegetables, cooked meats, herbs Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+                <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
             </ul>
         </div>
-
+        <hr>
         <div class="instructions">
             <h3>Instructions</h3>
             <ol>
@@ -41,8 +41,7 @@
                 <li><span class="bold">Enjoy:</span> Serve hot, with additional salt and pepper if needed.</li>
             </ol>
         </div>
-        
-
+        <hr>
         <div class="nutrition">
             <h3>Nutrition</h3>
             <p>The table below shows nutritional values per serving without the additional fillings.</p>
