--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="content-area">
+    <main>
         <img src="assets/image-omelette.jpeg" alt="folded egg omlette with fillings" id="final-result">
         <h1>Simple Omlette Recipe</h1>
         <div class="prep-time">
@@ -64,6 +64,6 @@
                 </tr>
             </table>
         </div>
-    </div>
+    </main>
 </body>
 </html>
