fix mobile styling

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <main>
         <img src="assets/image-omelette.jpeg" alt="folded egg omlette with fillings" id="final-result">
         <h1>Simple Omlette Recipe</h1>
-        <div class="prep-time">
+        <section class="prep-time">
             <h2>Preparation time</h2>
             <ul>
                 <li><span class="bold">Total: </span>Approximately 10 minutes</li>
                 <li><span class="bold">Preparation: </span>5 minutes</li>
                 <li><span class="bold">Cooking: </span>5 minutes</li>
             </ul>
-        </div>
+        </section>
 
-        <div class="ingredients">
+        <section class="ingredients">
             <h3>Ingredients</h3>
             <ul>
                 <li>2-3 large eggs</li>
@@ -28,9 +28,9 @@
                 <li>1 tablespoon of butter or oil</li>
                 <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
             </ul>
-        </div>
+        </section>
         <hr>
-        <div class="instructions">
+        <section class="instructions">
             <h3>Instructions</h3>
             <ol>
                 <li><span class="bold">Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
@@ -40,9 +40,9 @@
                 <li><span class="bold">Fold and serve:</span> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
                 <li><span class="bold">Enjoy:</span> Serve hot, with additional salt and pepper if needed.</li>
             </ol>
-        </div>
+        </section>
         <hr>
-        <div class="nutrition">
+        <section class="nutrition">
             <h3>Nutrition</h3>
             <p>The table below shows nutritional values per serving without the additional fillings.</p>
             <table class="nutrition-table">
@@ -63,7 +63,7 @@
                     <td class="value">22g</td>
                 </tr>
             </table>
-        </div>
+        </section>
     </main>
 </body>
 </html>
