fix header margins

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <main>
         <img src="assets/image-omelette.jpeg" alt="folded egg omlette with fillings" id="final-result">
-        <h1>Simple Omlette Recipe</h1>
+        <header class="picture-and-title">
+            <h1>Simple Omlette Recipe</h1>
+            <p>An easy and quick dish, perfect for any meal. This classic omlette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+        </header>
         <section class="prep-time">
             <h2>Preparation time</h2>
             <ul>
